Update new line for gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 HelloCICD/Pods
 HelloCICD/HelloCICD.xcodeproj/xcuserdata/
 HelloCICD/HelloCICD.xcodeproj/project.xcworkspace/xcuserdata/
+HelloCICD/HelloCICD.xcworkspace/xcuserdata/
